# multi-agent-orchestrator

./: .env.example  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: config.py  orchestrator.py  state.py
src/agents/: __init__.py  analyst.py  researcher.py  supervisor.py  writer.py
src/tools/: __init__.py  calculator.py  search.py
tests/: test_agents.py  test_cli.py  test_config.py  test_orchestrator.py  test_tools.py
