[project]
name = "multi-agent-orchestrator"
version = "0.1.0"
description = "A lightweight multi-agent orchestration framework built with LangGraph using a Supervisor pattern"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Thiago Reiquileut", email = "reiquileut@gmail.com"},
]
keywords = [
    "multi-agent",
    "langgraph",
    "langchain",
    "ai-agents",
    "orchestrator",
    "llm",
    "openai",
    "anthropic",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require API keys (deselect with '-m \"not integration\"')",
]
